[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.23"
cgmath = "0.18"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "28.0"
winit = { version = "0.30", features = ["android-native-activity"] }
bytemuck = { version = "1.24", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"
clap = { version = "4.5.54", features = ["derive"] }
